# Serial_Terminal

./: .gitignore  README.md  pyproject.toml
scripts/: virtual_loopback.py
src/serial_debug_cli/: __init__.py  app.py  codec.py  config.py  logger.py  main.py  mock_serial.py  serial_worker.py  stm32_isp.py  terminal.py  transfer.py
